--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.tencent.demo.multitasking"
+        applicationId "com.tencent.demo.starter"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -34,5 +34,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation project(path: ':multitasking')
+    implementation project(path: ':lib_starter')
 }
