--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name='MultiTasking'
+rootProject.name='android-starter'
 include ':app'
-include ':multitasking'
+include ':lib_starter'
